feat: fensu/energy storage rework, removed a few deprecated items/blocks as in upstream